# apa-multi-page-table-fixer

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_app.bat
docs/: ARCHITECTURE.md  CONTRIBUTING.md  README.md
src/: __init__.py  main.py
src/core/: analyzer.py  formatter.py  models.py  modifier.py
src/gui/: __init__.py  main_window.py
src/gui/components/: __init__.py  changes_panel.py  file_selector.py  format_controls.py  help_panel.py  loading_panel.py  results_panel.py  settings_panel.py
src/gui/themes/: __init__.py  fluent_theme.py  fonts.py
src/i18n/: __init__.py  en.json  es.json
src/rules/: __init__.py  base_rule.py  table_title_rule.py
src/rules/future_rules/: __init__.py
src/utils/: config.py  constants.py  exceptions.py  history.py  i18n.py  validators.py
tests/: __init__.py
